add apt get upgrade

--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -2,6 +2,7 @@ Vagrant.configure("2") do |config|
 	config.vm.box = "hashicorp/bionic64"
 
 	config.vm.provision "shell", inline: "sudo apt-get update"
+	config.vm.provision "shell", inline: "sudo apt-get upgrade"
 	config.vm.provision "shell", inline: "sudo apt-get install net-tools"
 
 	config.vm.define "acoezard" do |control|
