--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,9 +1,9 @@
 Vagrant.configure("2") do |config|
 	config.vm.box = "hashicorp/bionic64"
 
-	config.vm.provision "shell", inline: "sudo apt-get update"
-	config.vm.provision "shell", inline: "sudo apt-get upgrade"
-	config.vm.provision "shell", inline: "sudo apt-get install net-tools"
+	config.vm.provision "shell", inline: "sudo dpkg --configure -a"
+	config.vm.provision "shell", inline: "sudo apt-get update -y"
+	config.vm.provision "shell", inline: "sudo apt-get install net-tools -y"
 
 	config.vm.define "acoezard" do |control|
 		control.vm.hostname = "acoezardS"
