--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,16 +1,28 @@
 Vagrant.configure("2") do |config|
 	config.vm.box = "hashicorp/bionic64"
 
-	config.vm.provision "shell", inline: "sudo apt-get update -y"
+	# config.vm.provision "shell", inline: "sudo apt-get update -y"
 	config.vm.provision "shell", inline: "sudo apt-get install net-tools -y"
 
 	config.vm.define "acoezard" do |control|
 		control.vm.hostname = "acoezardS"
-		control.vm.network "public_network", ip: "192.168.56.110", hostname: true
+		control.vm.network "private_network", ip: "192.168.56.110", hostname: true
+
+		config.vm.provider "virtualbox" do |v|
+			v.customize ["modifyvm", :id, "--name", "acoezardS"]
+			v.memory = 512
+			v.cpus = 1
+		end
 	end
 
 	config.vm.define "asebrech" do |control|
 		control.vm.hostname = "asebrechSW"
-		control.vm.network "public_network", ip: "192.168.56.111", hostname: true
+		control.vm.network "private_network", ip: "192.168.56.111", hostname: true
+
+		config.vm.provider "virtualbox" do |v|
+			v.customize ["modifyvm", :id, "--name", "asebrechSW"]
+			v.memory = 512
+			v.cpus = 1
+		end
 	end
 end
