--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,12 +1,14 @@
 Vagrant.configure("2") do |config|
 	config.vm.box = "hashicorp/bionic64"
 
-	# config.vm.provision "shell", inline: "sudo apt-get update -y"
-	config.vm.provision "shell", inline: "sudo apt-get install net-tools -y"
+	config.vm.provision "shell", inline: <<-SHELL
+		sudo apt-get update -y
+		sudo apt-get install net-tools -y
+	SHELL
 
-	config.vm.define "acoezard" do |control|
+	config.vm.define "acoezardS" do |control|
 		control.vm.hostname = "acoezardS"
-		control.vm.network "private_network", ip: "192.168.56.110", hostname: true
+		control.vm.network "private_network", ip: "192.168.56.110"
 
 		config.vm.provider "virtualbox" do |v|
 			v.customize ["modifyvm", :id, "--name", "acoezardS"]
@@ -15,9 +17,9 @@ Vagrant.configure("2") do |config|
 		end
 	end
 
-	config.vm.define "asebrech" do |control|
+	config.vm.define "asebrechSW" do |control|
 		control.vm.hostname = "asebrechSW"
-		control.vm.network "private_network", ip: "192.168.56.111", hostname: true
+		control.vm.network "private_network", ip: "192.168.56.111"
 
 		config.vm.provider "virtualbox" do |v|
 			v.customize ["modifyvm", :id, "--name", "asebrechSW"]
