--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -10,8 +10,8 @@ Vagrant.configure("2") do |config|
 		control.vm.hostname = "acoezardS"
 		control.vm.network "private_network", ip: "192.168.56.110"
 
-		config.vm.provider "virtualbox" do |v|
-			v.customize ["modifyvm", :id, "--name", "acoezardS"]
+		control.vm.provider "virtualbox" do |v|
+			#v.customize ["modifyvm", :id, "--name", "acoezardS"]
 			v.memory = 512
 			v.cpus = 1
 		end
@@ -21,8 +21,8 @@ Vagrant.configure("2") do |config|
 		control.vm.hostname = "asebrechSW"
 		control.vm.network "private_network", ip: "192.168.56.111"
 
-		config.vm.provider "virtualbox" do |v|
-			v.customize ["modifyvm", :id, "--name", "asebrechSW"]
+		control.vm.provider "virtualbox" do |v|
+			#v.customize ["modifyvm", :id, "--name", "asebrechSW"]
 			v.memory = 512
 			v.cpus = 1
 		end
