--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,5 +1,6 @@
 Vagrant.configure("2") do |config|
-	config.vm.box = "hashicorp/bionic64"
+	config.vm.box = "debian/jessie64"
+	config.vm.box_url = "https://app.vagrantup.com/debian/boxes/jessie64"
 
 	config.vm.provision "shell", inline: <<-SHELL
 		sudo apt-get update -y
