--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -4,6 +4,7 @@ Vagrant.configure("2") do |config|
 	# config.vm.box_url = "https://app.vagrantup.com/debian/boxes/jessie64"
 
 	config.vm.provision "shell", inline: <<-SHELL
+		export DEBIAN_FRONTEND=noninteractive
 		sudo apt-get update -y
 		sudo apt-get install net-tools -y
 	SHELL
@@ -14,9 +15,21 @@ Vagrant.configure("2") do |config|
 
 		control.vm.provider "virtualbox" do |v|
 			#v.customize ["modifyvm", :id, "--name", "acoezardS"]
-			v.memory = 512
+			v.memory = 1024
 			v.cpus = 1
 		end
+
+		control.vm.provision "shell", privileged: true, inline: <<-SHELL
+			echo "127.0.0.1 $(hostname)" >> /etc/hosts
+
+			export K3S_KUBECONFIG_MODE="644"
+			export INSTALL_K3S_VERSION="v1.22.9+k3s1"
+			export INSTALL_K3S_EXEC="server --advertise-address=192.168.42.110 --node-ip=192.168.42.110"
+
+			curl -sfL https://get.k3s.io | sh -
+
+			alias k="kubectl" >> /home/vagrant/.bashrc
+		SHELL
 	end
 
 	config.vm.define "asebrechSW" do |control|
@@ -25,7 +38,7 @@ Vagrant.configure("2") do |config|
 
 		control.vm.provider "virtualbox" do |v|
 			#v.customize ["modifyvm", :id, "--name", "asebrechSW"]
-			v.memory = 512
+			v.memory = 1024
 			v.cpus = 1
 		end
 	end
