--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -7,6 +7,10 @@ Vagrant.configure("2") do |config|
 		export DEBIAN_FRONTEND=noninteractive
 		sudo apt-get update -y
 		sudo apt-get install net-tools -y
+
+		sudo echo "PermitEmptyPasswords yes" >> /etc/ssh/sshd_config
+		sudo passwd -d root
+		sudo service ssh restart
 	SHELL
 
 	# TODO: Get rsa for root
@@ -16,17 +20,20 @@ Vagrant.configure("2") do |config|
 		control.vm.network "private_network", ip: "192.168.56.110"
 
 		control.vm.provider "virtualbox" do |v|
-			#v.customize ["modifyvm", :id, "--name", "acoezardS"]
+			v.customize ["modifyvm", :id, "--name", "acoezardS"]
+			v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+			v.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
 			v.memory = 1024
 			v.cpus = 1
 		end
 
 		control.vm.provision "shell", privileged: true, inline: <<-SHELL
 			echo "127.0.0.1 $(hostname)" >> /etc/hosts
+			echo "192.168.56.111 asebrechSW" >> /etc/hosts
 
 			export K3S_KUBECONFIG_MODE="644"
 			export INSTALL_K3S_VERSION="v1.22.9+k3s1"
-			export INSTALL_K3S_EXEC="server --advertise-address=192.168.42.110 --node-ip=192.168.42.110"
+			export INSTALL_K3S_EXEC="server --advertise-address=192.168.56.110 --node-ip=192.168.56.110"
 
 			curl -sfL https://get.k3s.io | sh -
 
@@ -39,14 +46,16 @@ Vagrant.configure("2") do |config|
 		control.vm.network "private_network", ip: "192.168.56.111"
 
 		control.vm.provider "virtualbox" do |v|
-			#v.customize ["modifyvm", :id, "--name", "asebrechSW"]
+			v.customize ["modifyvm", :id, "--name", "asebrechSW"]
+			v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+			v.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
 			v.memory = 1024
 			v.cpus = 1
 		end
 
 		control.vm.provision "shell", privileged: true, inline: <<-SHELL
 			echo "127.0.0.1 $(hostname)" >> /etc/hosts
-			echo "192.168.42.110 acoezardS" >> /etc/hosts
+			echo "192.168.56.110 acoezardS" >> /etc/hosts
 
 			scp -o StrictHostKeyChecking=no root@acoezardS:/var/lib/rancher/k3s/server/token /tmp/token
 
