--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -27,7 +27,7 @@ Vagrant.configure("2") do |config|
 
 			export K3S_KUBECONFIG_MODE="644"
 			export INSTALL_K3S_VERSION="v1.22.9+k3s1"
-			export INSTALL_K3S_EXEC="server --advertise-address=192.168.56.110 --node-ip=192.168.56.110"
+			export INSTALL_K3S_EXEC="server --write-kubeconfig-mode 644 --advertise-address=192.168.56.110 --node-ip=192.168.56.110"
 
 			curl -sfL https://get.k3s.io | sh -
 
