--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -22,18 +22,28 @@ Vagrant.configure("2") do |config|
 			file.destination = "/tmp/deployment.yaml"
 		end
 
+		control.vm.provision "file" do |file|
+			file.source = "./app1"
+			file.destination = "/tmp/app1"
+		end
+
 		control.vm.provision "shell", privileged: true, inline: <<-SHELL
 			echo "127.0.0.1 $(hostname)" >> /etc/hosts
 
 			export K3S_KUBECONFIG_MODE="644"
 			export INSTALL_K3S_VERSION="v1.22.9+k3s1"
-			export INSTALL_K3S_EXEC="server --write-kubeconfig-mode 644 --advertise-address=192.168.56.110 --node-ip=192.168.56.110"
+			export INSTALL_K3S_EXEC="server --node-ip=192.168.56.110"
 
 			curl -sfL https://get.k3s.io | sh -
 
 			echo "alias k='kubectl'" >> /home/vagrant/.bashrc
 
-			kubectl apply -f /tmp/deployment.yaml
+			mv /tmp/deployment.yaml /home/vagrant/deployment.yaml
+			mv /tmp/app1 /home/vagrant/app1
+
+			kubectl create configmap app-one-html --from-file=/home/vagrant/app1/index.html
+
+			kubectl apply -f /home/vagrant/deployment.yaml
 		SHELL
 	end
 end
