--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -18,13 +18,13 @@ Vagrant.configure("2") do |config|
 		end
 
 		control.vm.provision "file" do |file|
-			file.source = "./deployment.yaml"
-			file.destination = "/home/vagrant/deployment.yaml"
+			file.source = "./deployment/app-one.yaml"
+			file.destination = "/home/vagrant/app-one.yaml"
 		end
 
 		control.vm.provision "file" do |file|
-			file.source = "./app1"
-			file.destination = "/home/vagrant/app1"
+			file.source = "./deployment/ingress.yaml"
+			file.destination = "/home/vagrant/ingress.yaml"
 		end
 
 		control.vm.provision "shell", privileged: true, inline: <<-SHELL
@@ -38,8 +38,10 @@ Vagrant.configure("2") do |config|
 
 			echo "alias k='kubectl'" >> /home/vagrant/.bashrc
 
-			kubectl create configmap app-one-config --from-file=/home/vagrant/app1/index.html
-			kubectl apply -f /home/vagrant/deployment.yaml
+			kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/cloud/deploy.yaml
+
+			kubectl apply -f /home/vagrant/app-one.yaml
+			kubectl apply -f /home/vagrant/ingress.yaml
 		SHELL
 	end
 end
