--- a/p2/deployment/app-one.yaml
+++ b/p2/deployment/app-one.yaml
@@ -21,7 +21,7 @@ spec:
             - name: MESSAGE
               value: "Hello from app1."
           ports:
-            - containerPort: 8080
+            - containerPort: 80
 
 apiVersion: v1
 kind: Service
@@ -32,33 +32,33 @@ spec:
     app: app-one
   ports:
     - protocol: TCP
-      port: 8080
+      port: 80
       targetPort: 80
 
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: app-two
-#   labels:
-#     app: app-two
-# spec:
-#   replicas: 3
-#   selector:
-#     matchLabels:
-#       app: app-two
-#   template:
-#     metadata:
-#       labels:
-#         app: app-two
-#     spec:
-#       containers:
-#         - name: app-two
-#           image: paulbouwer/hello-kubernetes:1.10
-#           env:
-#             - name: MESSAGE
-#               value: "Hello from app2."
-#           ports:
-#             - containerPort: 80
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: app-two
+  labels:
+    app: app-two
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: app-two
+  template:
+    metadata:
+      labels:
+        app: app-two
+    spec:
+      containers:
+        - name: app-two
+          image: paulbouwer/hello-kubernetes:1.10
+          env:
+            - name: MESSAGE
+              value: "Hello from app2."
+          ports:
+            - containerPort: 80
 
 # apiVersion: apps/v1
 # kind: Deployment
@@ -85,19 +85,18 @@ spec:
 #           ports:
 #             - containerPort: 80
 
-# apiVersion: apps/v1
-# kind: Service
-# metadata:
-#   name: app-two
-# spec:
-#   selector:
-#     app: app-two
-#   ports:
-#     - name: http
-#       protocol: TCP
-#       port: 80
-#       targetPort: 80
-#   clusterIP: 10.43.193.160
+apiVersion: v1
+kind: Service
+metadata:
+  name: app-two
+spec:
+  selector:
+    app: app-two
+  ports:
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 80
 
 # apiVersion: apps/v1
 # kind: Service
