--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -1,49 +1,24 @@
 Vagrant.configure("2") do |config|
 	config.vm.box = "hashicorp/bionic64"
-
-	config.vm.provision "shell", inline: <<-SHELL
-		export DEBIAN_FRONTEND=noninteractive
-		sudo apt-get update -y
-		sudo apt-get install net-tools -y
-	SHELL
-
-	config.vm.define "acoezardS" do |control|
-		control.vm.hostname = "acoezardS"
-		control.vm.network "private_network", ip: "192.168.56.110"
-
-		control.vm.provider "virtualbox" do |v|
-			v.customize ["modifyvm", :id, "--name", "acoezardS"]
-			v.memory = 2048
-			v.cpus = 1
-		end
-
-		control.vm.provision "file" do |file|
-			file.source = "./deployment/app-one.yaml"
-			file.destination = "/home/vagrant/app-one.yaml"
-		end
-
-		control.vm.provision "file" do |file|
-			file.source = "./deployment/ingress.yaml"
-			file.destination = "/home/vagrant/ingress.yaml"
-		end
-
-		control.vm.provision "shell", privileged: true, inline: <<-SHELL
-			echo "127.0.0.1 $(hostname)" >> /etc/hosts
-
-			export K3S_KUBECONFIG_MODE="644"
-			export INSTALL_K3S_VERSION="v1.22.9+k3s1"
-			export INSTALL_K3S_EXEC="server --node-ip=192.168.56.110"
-
-			curl -sfL https://get.k3s.io | sh -
-
-			echo "alias k='kubectl'" >> /home/vagrant/.bashrc
-
-			kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.2/deploy/static/provider/cloud/deploy.yaml
-
-			kubectl delete -A ValidatingWebhookConfiguration ingress-nginx-admission
-
-			kubectl apply -f /home/vagrant/app-one.yaml
-			kubectl apply -f /home/vagrant/ingress.yaml
-		SHELL
+	config.vm.hostname = "lmatarisS"
+	config.vm.provider "virtualbox" do |v|
+		v.name = "lmatarisS"
+		v.memory = 2048
+		v.cpus = 1
 	end
+
+	config.vm.network "private_network", ip: "192.168.56.110"
+	config.vm.provision "shell", privileged: false, inline: <<-SHELL
+		echo "127.0.0.1 $(hostname)" >> /etc/hosts
+
+		export K3S_KUBECONFIG_MODE="644"
+		export INSTALL_K3S_EXEC="--flannel-iface=eth1"
+
+		curl -sfL https://get.k3s.io | sh -
+
+		echo "alias k='kubectl'" >> /home/vagrant/.bashrc
+
+		kubectl apply -f /vagrant/deployment/app-one.yaml
+		kubectl apply -f /vagrant/deployment/ingress.yaml
+	SHELL
 end
