--- a/p2/deployment/ingress.yaml
+++ b/p2/deployment/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app-ingress
+  name: ingress-service
 spec:
   rules:
   - host: app1.com
@@ -14,41 +14,3 @@ spec:
             name: app-one
             port:
               number: 80
-  ingressClassName: nginx
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: app-ingress
-spec:
-  rules:
-  - host: app2.com
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: app-two
-            port:
-              number: 80
-  ingressClassName: nginx
-  # - host: app2.com
-  #   http:
-  #     paths:
-  #     - path: /
-  #       pathType: Prefix
-  #       backend:
-  #         service:
-  #           name: app-two
-  #           port:
-  #             number: 80
-  # - http:
-  #     paths:
-  #     - path: /
-  #       pathType: Prefix
-  #       backend:
-  #         service:
-  #           name: app-three
-  #           port:
-  #             number: 80
