--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -9,7 +9,7 @@ Vagrant.configure("2") do |config|
 
 	config.vm.network "private_network", ip: "192.168.56.110"
 	config.vm.provision "shell", privileged: false, inline: <<-SHELL
-		echo "127.0.0.1 $(hostname)" >> /etc/hosts
+		sudo echo "127.0.0.1 $(hostname)" >> /etc/hosts
 
 		export K3S_KUBECONFIG_MODE="644"
 		export INSTALL_K3S_EXEC="--flannel-iface=eth1"
@@ -19,6 +19,8 @@ Vagrant.configure("2") do |config|
 		echo "alias k='kubectl'" >> /home/vagrant/.bashrc
 
 		kubectl apply -f /vagrant/deployment/app-one.yaml
+		kubectl apply -f /vagrant/deployment/app-two.yaml
+		kubectl apply -f /vagrant/deployment/app-three.yaml
 		kubectl apply -f /vagrant/deployment/ingress.yaml
 	SHELL
 end
