--- a/p2/deployment/ingress.yaml
+++ b/p2/deployment/ingress.yaml
@@ -14,3 +14,23 @@ spec:
             name: app-one
             port:
               number: 80
+  - host: app2.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: app-two
+            port:
+              number: 80
+  - host: app3.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: app-three
+            port:
+              number: 80
