--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,12 +1,12 @@
 Vagrant.configure("2") do |config|
 	config.vm.box = "hashicorp/bionic64"
 
-	config.vm.define "acoezarS" do |control|
-		control.vm.hostname = "acoezarS"
+	config.vm.define "acoezardS" do |control|
+		control.vm.hostname = "acoezardS"
 		control.vm.network "private_network", ip: "192.168.56.110"
 
 		control.vm.provider "virtualbox" do |v|
-			v.name = "acoezarS"
+			v.name = "acoezardS"
 			v.memory = 2048
 			v.cpus = 1
 		end
