--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -9,17 +9,15 @@ Vagrant.configure("2") do |config|
 
 	config.vm.network "private_network", ip: "192.168.56.110"
 	config.vm.provision "shell", privileged: false, inline: <<-SHELL
-		sudo echo "127.0.0.1 $(hostname)" >> /etc/hosts
-
 		export K3S_KUBECONFIG_MODE="644"
 
 		curl -sfL https://get.k3s.io | sh -
 
 		echo "alias k='kubectl'" >> /home/vagrant/.bashrc
 
-		kubectl apply -f /vagrant/deployment/app-one.yaml
-		kubectl apply -f /vagrant/deployment/app-two.yaml
-		kubectl apply -f /vagrant/deployment/app-three.yaml
-		kubectl apply -f /vagrant/deployment/ingress.yaml
+		kubectl apply -f /vagrant/confs/app-one.yaml
+		kubectl apply -f /vagrant/confs/app-two.yaml
+		kubectl apply -f /vagrant/confs/app-three.yaml
+		kubectl apply -f /vagrant/confs/ingress.yaml
 	SHELL
 end
